--- a/gymshark.html
+++ b/gymshark.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gymshark</title>
 
-    <!-- Conectar el CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-    <!-- ENCABEZADO (HTML5) -->
+    <!-- ENCABEZADO -->
     <header>
         <h1>Gymshark</h1>
         <p>Marca de ropa deportiva enfocada en el fitness y estilo de vida activo.</p>
@@ -20,61 +21,85 @@
     <!-- CONTENIDO PRINCIPAL -->
     <main>
 
-        <!-- SECCIÓN DE PROYECTOS -->
+        <!-- PROYECTOS -->
         <section id="proyectos">
             <h2>Proyectos Destacados</h2>
 
-            <article class="proyecto">
-                <h3>Línea de ropa deportiva</h3>
-                <img src="IMAGENES/camisa.webp" alt="Ropa deportiva Gymshark">
-                <p>Ropa cómoda y moderna para entrenar.</p>
-            </article>
+            <div class="contenedor-proyectos">
 
-            <article class="proyecto">
-                <h3>Colaboraciones con atletas</h3>
-                <img src="IMAGENES/atletas.png" alt="Atletas Gymshark">
-                <p>Trabajo con influencers y atletas profesionales.</p>
-            </article>
+                <article class="proyecto">
+                    <h3>Línea de ropa deportiva</h3>
+                    <img src="IMAGENES/camisa.webp" alt="Ropa deportiva Gymshark">
+                    <p>Ropa cómoda y moderna para entrenar.</p>
+                </article>
 
-            <article class="proyecto">
-                <h3>Tienda en línea</h3>
-                <a href="https://row.gymshark.com/" target="_blank">
-                    <img src="IMAGENES/tiendaenlinea.png" alt="Tienda en línea Gymshark">
-                </a>
-                <p>Plataforma web para comprar productos desde casa.</p>
-            </article>
+                <article class="proyecto">
+                    <h3>Colaboraciones con atletas</h3>
+                    <img src="IMAGENES/atletas.png" alt="Atletas Gymshark">
+                    <p>Trabajo con influencers y atletas profesionales.</p>
+                </article>
+
+                <article class="proyecto">
+                    <h3>Tienda en línea</h3>
+                    <a href="https://row.gymshark.com/" target="_blank">
+                        <img src="IMAGENES/tiendaenlinea.png" alt="Tienda en línea Gymshark">
+                    </a>
+                    <p>Plataforma web para comprar productos desde casa.</p>
+                </article>
+
+            </div>
         </section>
 
-        <!-- SECCIÓN DE CONTACTO -->
+        <!-- CONTACTO -->
         <section id="contacto">
             <h2>Contacto</h2>
 
             <form>
-                <label for="nombre">Nombre:</label>
+                <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" required>
 
-                <label for="correo">Correo:</label>
+                <label for="correo">Correo</label>
                 <input type="email" id="correo" required>
 
-                <label for="mensaje">Mensaje:</label>
-                <textarea id="mensaje" required></textarea>
+                <label for="mensaje">Mensaje</label>
+                <textarea id="mensaje" rows="4" required></textarea>
 
                 <button type="submit">Enviar</button>
             </form>
         </section>
 
+                <!-- GESTOR DE TAREAS -->
+        <section id="gestor-tareas">
+            <h2>Gestión de Tareas</h2>
+            <p>Organiza y administra tus tareas diarias.</p>
+
+            <div class="tareas-container">
+                <input 
+                    type="text" 
+                    id="tareaInput" 
+                    placeholder="Escribe una nueva tarea">
+
+                <button id="agregarBtn">Agregar Tarea</button>
+
+                <ul id="listaTareas"></ul>
+            </div>
+        </section>
+
     </main>
 
-    <!-- PIE DE PÁGINA (HTML5) -->
+    <!-- PIE DE PÁGINA -->
     <footer>
         <p>Síguenos en redes sociales</p>
-        <a href="#">Instagram</a> |
-        <a href="#">Facebook</a> |
-        <a href="#">Twitter</a>
+        <div class="redes">
+            <a href="#">Instagram</a>
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+        </div>
         <p>© 2026 Gymshark</p>
     </footer>
+    
+    <!-- JavaScript -->
+    <script src="app.js"></script>
 
 </body>
 </html>
-
-
